bug fixes